fix: text overflow

--- a/src/app/assets/scss/abstracts/_mixins.scss
+++ b/src/app/assets/scss/abstracts/_mixins.scss
@@ -10,6 +10,9 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @mixin button-style {
